--- a/CLASS ACTIVITY/activity 1/task 2.html
+++ b/CLASS ACTIVITY/activity 1/task 2.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link external stylesheet -->   
     <link rel="stylesheet" href="task 2.css">
 </head>
 <body>
+     <!-- Page heading -->
     <h1>GRIDS</h1>
     <div class="container">
+        <!-- Grid items with images -->
         <div class="item 1"><img src="images/img1.jpg" ></div>
         <div class="item 2"><img src="images/img9.jpg" ></div>
         <div class="item 3"><img src="images/img3.jpg" ></div>
@@ -19,6 +22,7 @@
         <div class="item 8"><img src="images/img8.jpg" ></div>
  
     </div>
+    <!-- Footer with your name -->
     <footer>
         Made by &copy; Ayisha Mannan &nbsp;&nbsp; 
     </footer>
