--- a/Task 1/index.html
+++ b/Task 1/index.html
@@ -12,20 +12,28 @@
     </style>
 </head>
 <body>
+    <!-- header -->
     <header>
+        <!-- logo image -->
         <div class="logo"><img src="image/logo.png" alt="logo"></div>
-        <nav><ul>
-            <li><a href="">Our Blog</a></li>
-            <li><a href="">Our Artists</a></li>
-            <li><a href="">Our Story</a></li>
-        </ul></nav>
+        <nav>
+            <!-- nav links -->
+            <ul>
+                <li><a href="">Our Blog</a></li>
+                <li><a href="">Our Artists</a></li>
+                <li><a href="">Our Story</a></li>
+        </ul>
+    </nav>
     </header>
+    <!-- main part start -->
     <main >
+        <!-- main top section -->
         <section class="one">
             <h1>Erased Tapes:</h1>
             <h2>Exploring the Sonic Frontier</h3>
             <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Mi eu scelerisque turpis posuere tempor? Leo condimentum himenaeos molestie elit; maximus iaculis proin nulla. Ullamcorper nibh cras conubia suscipit dapibus sagittis, facilisi habitant vivamus. Etiam fusce posuere himenaeos ipsum commodo sollicitudin himenaeos nec.</p>
         </section>
+        <!-- Content grid -->
         <section class="contain">
             <div>
                 <h2>Heading</h2>
@@ -46,6 +54,7 @@
                 <p>Ad venenatis sapien habitant posuere donec porttitor vel nisi. Sodales laoreet donec diam rhoncus lectus euismod orci torquent curae. Fames rhoncus torquent sed convallis; potenti cras. Dictumst arcu libero nulla malesuada mi ridiculus platea. Interdum ullamcorper fringilla himenaeos mollis; in arcu pharetra massa. Nunc mauris taciti montes sapien molestie orci ac quis.</p>
             </div>
         </section>
+        <!-- Image grid -->
         <section class="images">
             <img class="big" src="image/img1.jpg" alt="">
             <img src="image/img2.jpg" alt="">
@@ -53,6 +62,7 @@
             <img src="image/img4.jpg" alt="">
             <img src="image/img5.jpg" alt="">
         </section>
+        <!-- Author section -->
         <section class="last">
            <div id="left">
             <h2>The Author</h2>
@@ -60,6 +70,7 @@
            </div>
            <img src="image/author.jpg" alt="author">
         </section>
+        <!-- Footer text -->
         <footer>
             Copyright © 2023 Erased Disks Ltd.
         </footer>
