--- a/CLASS ACTIVITY/activity 2/index.html
+++ b/CLASS ACTIVITY/activity 2/index.html
@@ -10,6 +10,7 @@
     <header class="bg">
         
         <nav>
+            <!-- Logo and navigation links -->  
             <div class="logo"><a href=""><h1>mAc cAfé</h1></a></div>
             <ul>
                 <li class="bar"><a href="">Home</a></li>
@@ -18,6 +19,7 @@
             </ul>
         </nav>
     </header>
+    <!-- Footer -->
     <footer>
         Made by &copy; Ayisha Mannan &nbsp;&nbsp; 
     </footer>
